web/nginx-front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-container
          imagePullPolicy: Always
          image: pant7/famly-front:v1
          ports:
            - containerPort: 80
