web/nginx-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app   # Match the labels used in your Deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer   # Expose the service using a LoadBalancer
